<resources>
    <string name="app_name">Ethernom Maintenance</string>

    <!--    Toast-->
    <string name="toast_success">SUCCESS :</string>
    <string name="toast_warning">WARNING :</string>
    <string name="toast_danger">DANGER :</string>
    <string name="okay">Okay</string>
    <string name="exit">Exit</string>
    <string name="connection_successfully">Connection Successfully</string>
    <string name="back">Back</string>
    <string name="phone_number">Phone Number</string>
    <string name="setting">Setting</string>
    <string name="set_up">Setup</string>
    <string name="goople_mode">Goople Mode</string>
    <string name="name">Name</string>

    <!-- Splash Activity -->
    <string name="app_version">Version:</string>
    <string name="warning">Warning</string>
    <string name="turn_on_bluetooth_message_cred">Turn on Bluetooth and allow the Ethernom Contact Tracing to connect Bluetooth accessories. Do you want to enable it?</string>
    <string name="enable">Enable</string>
    <string name="dismiss">Dismiss</string>
    <string name="loading">Loading</string>

    <string name="capsule_onboarding_completed">Capsule onboarding completed</string>
    <string name="searching_nearby_device">Searching nearby device...</string>

    <!-- Login Activity -->
    <string name="test_txt">Test Toolbar</string>
    <string name="authentication"><u>Authentication</u></string>
    <string name="access_for_maintenance_device">Access to maintain the capsule.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>

    <!-- Discover Activity -->
    <string name="discover_toolbar_text">Discover Device</string>
    <string name="question">&#63;</string>
    <string name="card_name">Google!Puttheavy</string>
    <string name="sn">1.2.123</string>

    <!-- Maintenance Activity -->
    <string name="main_toolbar">Maintenance</string>
    <string name="select_an_option_below"><u>Select an options</u></string>
    <string name="menu_reset">Capsule Factory Reset</string>
    <string name="menu_debug_process">Debug Process</string>
    <string name="menu_read_qr">Read QR Code</string>
    <string name="menu_about">About</string>

    <!-- Debug Process Activity -->
    <string name="debug_toolbar">Debug Process</string>
    <string name="debug_info"><u>Debug Information</u></string>
    <string name="battery_level">Battery Level:</string>
    <string name="capsule_status">Capsule Status</string>
    <string name="values">Values</string>
    <string name="ao">AO</string>
    <string name="cs">CS</string>
    <string name="ent">EVENT</string>
    <string name="close">Close</string>
    <string name="disable_ct">Disable CT</string>
    <string name="enable_ct">Enable CT</string>

    <!-- QR Code Activity -->
    <string name="qr_code_toolbar">QR Code</string>
    <string name="qr_info"><u>QR Code Information</u></string>
    <string name="save_qr_code">Save QR</string>
    <string name="show_qr_folder">Show Folder QR</string>


    <!-- About Activity -->
    <string name="about_toolbar">About</string>
    <string name="capsule_version">Capsule Version : </string>
    <string name="term_of_service">Term of service </string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="all_rights_reserved">All rights reserved.</string>
    <string name="copyright">Copyright &#169;</string>
    <string name="company_name">Ethernom, Inc.</string>
    <string name="deliminator">,</string>

    <!-- Dialog -->
    <string name="capsule_reset_title">Special system factory reset</string>
    <string name="capsule_reset_in_progress">System configuration request special reset in progress.</string>
    <string name="capsule_reset_success">System configuration successfully.</string>
    <string name="capsule_not_onboard">Invalid Capsule.</string>
    <string name="capsule_not_yet_user_onboard">Capsule not onboarded with a user yet.</string>
    <string name="capsule_reset_timeout">System configuration request capsule factory reset timeout.</string>
    <string name="capsule_reset_failed">System configuration request capsule factory reset failed.</string>

    <string name="debug_title">Debug Process Request</string>
    <string name="debug_in_progress">System configuration debug process in progress.</string>
    <string name="debug_success">System configuration successfully.</string>
    <string name="debug_timeout">System configuration debug process timeout.</string>
    <string name="debug_failed">System configuration debug process was failure.</string>
    <string name="debug_update_ct">System configuration update CT timeout.</string>

    <string name="qr_code_title">QR Code Request</string>
    <string name="qr_code_in_progress">QR code request in progress</string>
    <string name="qr_code_success">QR code request successfully</string>
    <string name="qr_code_timeout">QR code request timeout.</string>
    <string name="qr_code_failed">QR code request was failure.</string>

    <string name="advertise_device_title">Advertise Nearby Devices</string>
    <string name="advertise_device_msg">Please press on your capsule devices (1 short press combination by 2 short press) to advertise bluetooth.</string>

    <string name="connection_timeout_title">Connection Failed</string>
    <string name="connection_timeout_msg">Connecting with Capsule has been timeout. Please try again.</string>

    <string name="network_title">Could Not Connect</string>
    <string name="network_msg">Make sure you are connected to Wi-Fi or your cellular network.</string>

    <string name="login_failed">Username and password were incorrect</string>
    <string name="login_timeout">Login request timeout. Please try again!</string>
    <!-- Loading -->
    <string name="loading_connecting">Loading: Connecting</string>
    <string name="retry">Retry</string>

    <!-- BLE msg -->
    <string name="nearby_device_permission_title">Allow nearby devices permission</string>
    <string name="nearby_device_permission_message">Apps with this permission can find, connect to, and determine the relative position fo nearby devices.</string>
    <string name="bluetooth_device_title">Turn on the Bluetooth device</string>
    <string name="bluetooth_device_message">This is necessary to find a Bluetooth device near you. Check your Bluetooth device.</string>
    <string name="bluetooth_device_turn_on">This is necessary to find a Bluetooth device near you. Please turn it on.</string>
    <string name="turn_on">Turn on</string>

    <!-- Location msg -->
    <string name="location_permission_title">Allow location permissions</string>
    <string name="location_permission_message">Apps with permission can access this device\'s location</string>
    <string name="location_service_title">Turn on the location service</string>
    <string name="location_service_message">This is necessary to find a Bluetooth device near you. Check your Location service.</string>

</resources>