<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.AboutActivity">

    <include layout="@layout/toolbar_back_press"/>

    <ImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:paddingStart="@dimen/dimen_50dp"
        android:paddingEnd="@dimen/dimen_50dp"
        android:scaleType="centerInside"
        android:src="@drawable/img_ethernom_maintenance"
        tools:ignore="ContentDescription" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ln_version"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dimen_20dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_version"
                android:textSize="@dimen/text_size_18sp" />

            <TextView
                android:id="@+id/capsuleVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/capsule_version"
                android:textSize="@dimen/text_size_18sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/copyRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:text="@string/copyright"
                android:textSize="@dimen/text_size_18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:text="@string/all_rights_reserved"
                android:textSize="@dimen/text_size_18sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_terms_of_service"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:background="@android:color/transparent"
                    android:text="@string/term_of_service"
                    android:textAllCaps="false"
                    android:textColor="@color/color_term_of_service"
                    android:textSize="@dimen/text_size_18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/dimen_5dp"
                    android:text="@string/deliminator"
                    android:textColor="@color/color_term_of_service"
                    tools:ignore="RtlSymmetry" />

                <Button
                    android:id="@+id/btn_privacy"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:background="@android:color/transparent"
                    android:text="@string/privacy_policy"
                    android:textAllCaps="false"
                    android:textColor="@color/color_term_of_service"
                    android:textSize="@dimen/text_size_18sp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>