<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dimen_15dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/advertise_device_title"
        android:textSize="@dimen/text_size_18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:gravity="center"
        android:text="@string/advertise_device_msg"
        android:textSize="@dimen/text_size_16sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_confirm"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_40dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:layout_marginBottom="@dimen/dimen_3dp"
        android:background="@drawable/selector_save_qr"
        android:text="@string/okay"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16sp" />

</LinearLayout>
