<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ln_row"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:background="@drawable/bg_row_capsule_gray"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_ao"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/ao"
        android:textColor="@color/colorText"
        android:textSize="@dimen/text_size_14sp" />

    <View
        android:layout_width="0.3dp"
        android:layout_height="match_parent"
        android:background="#807F7F" />

    <TextView
        android:id="@+id/tv_cs"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/cs"
        android:textColor="@color/colorText"
        android:textSize="@dimen/text_size_14sp" />

    <View
        android:layout_width="0.3dp"
        android:layout_height="match_parent"
        android:background="#807F7F" />

    <TextView
        android:id="@+id/tv_ent"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/ent"
        android:textColor="@color/colorText"
        android:textSize="@dimen/text_size_14sp" />


</LinearLayout>
