<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    android:padding="@dimen/dimen_20dp">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/img_ethernom"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authentication"
        android:textSize="@dimen/text_size_20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:text="@string/access_for_maintenance_device"
        android:textSize="@dimen/text_size_16sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ed_username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50dp"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:background="@drawable/bg_editable"
        android:gravity="center|start"
        android:drawablePadding="@dimen/dimen_10dp"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/dimen_10dp"
        android:paddingEnd="@dimen/dimen_10dp"
        tools:ignore="RtlSymmetry" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50dp"
        android:background="@drawable/bg_editable"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_hide_password"
            android:layout_width="@dimen/dimen_20dp"
            android:layout_height="@dimen/dimen_20dp"
            android:layout_marginEnd="@dimen/dimen_10dp"
            android:layout_centerInParent="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_hide_eye"/>

        <Button
            android:id="@+id/btn_hide_password"
            android:layout_width="@dimen/dimen_30dp"
            android:layout_height="@dimen/dimen_30dp"
            android:layout_centerInParent="true"
            android:layout_marginEnd="@dimen/dimen_5dp"
            android:background="@drawable/selector_hide_password"
            android:layout_alignParentEnd="true"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_password"
            android:layout_toStartOf="@id/img_hide_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="center|start"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingEnd="@dimen/dimen_5dp"
            android:paddingStart="@dimen/dimen_10dp"
            tools:ignore="RtlSymmetry" />
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:background="@drawable/selector_login"
        android:text="@string/log_in" />


</LinearLayout>