<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dimen_20dp">

    <ImageView
        android:id="@+id/imv_logo"
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:layout_gravity="center"
        android:src="@drawable/ic_cancel" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:gravity="center"
        android:text="@string/capsule_reset_title"
        android:textSize="@dimen/text_size_18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:gravity="center"
        android:text="@string/capsule_reset_in_progress"
        android:textSize="@dimen/text_size_16sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_confirm"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_40dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:background="@drawable/selector_disable_ct"
        android:text="@string/exit"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_5dp" />
</LinearLayout>
