<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/custom_toast_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#8D80CC28">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="@dimen/dimen_10dp"
        android:paddingTop="@dimen/dimen_15dp"
        android:paddingBottom="@dimen/dimen_15dp"
        android:orientation="horizontal"
        tools:ignore="RtlSymmetry">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/toastImage"
            android:layout_width="@dimen/dimen_20dp"
            android:layout_height="@dimen/dimen_20dp"
            android:src="@drawable/ic_success_icon" />

        <TextView
            android:id="@+id/toastType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/toast_success"
            android:textColor="#FFF"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/custom_toast_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:text="@string/capsule_onboarding_completed"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/buttonOkay"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/okay"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:textColor="#FFF"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:background="@null"
            android:textSize="13sp" />
    </LinearLayout>
</LinearLayout>