<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.DebugProcessActivity">

    <include layout="@layout/toolbar_back_press" />

    <TextView
        android:id="@+id/tv_username"
        style="@style/SingleLineTextView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_45dp"
        android:background="@android:color/background_dark"
        android:gravity="center"
        android:textColor="@android:color/background_light"
        android:textSize="@dimen/text_size_18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:text="@string/debug_info"
        android:textSize="@dimen/text_size_20sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dimen_10dp">

        <!--   Button Enable/Disable CT     -->
        <LinearLayout
            android:id="@+id/ln_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dimen_10dp"
            android:gravity="bottom"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_update_ct"
                android:layout_width="300dp"
                android:layout_height="@dimen/dimen_50dp"
                android:layout_gravity="center"
                android:background="@drawable/selector_disable_ct"
                android:text="@string/disable_ct"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_close"
                android:layout_width="300dp"
                android:layout_height="@dimen/dimen_50dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_marginBottom="@dimen/dimen_5dp"
                android:background="@drawable/selector_show_qr"
                android:text="@string/close"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_16sp"
                android:visibility="visible" />

        </LinearLayout>

        <!--   Table CT     -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/ln_button"
            android:orientation="vertical">

            <!--   CT Status Table    -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:background="@drawable/bg_row_capsule"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/bg_row_capsule_white"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/colorBlueGrey_200"
                        android:gravity="center"
                        android:text="@string/capsule_status"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_16sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="0.3dp"
                        android:layout_height="match_parent"
                        android:background="#807F7F" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/colorBlueGrey_200"
                        android:gravity="center"
                        android:text="@string/values"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_16sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcv_ct_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0.3dp" />


            </LinearLayout>

            <!--   AOs Table     -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:background="@drawable/bg_row_capsule"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/bg_row_capsule_white"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/colorBlueGrey_200"
                        android:gravity="center"
                        android:text="@string/ao"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_16sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="0.3dp"
                        android:layout_height="match_parent"
                        android:background="#807F7F" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/colorBlueGrey_200"
                        android:gravity="center"
                        android:text="@string/cs"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_16sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="0.3dp"
                        android:layout_height="match_parent"
                        android:background="#807F7F" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/colorBlueGrey_200"
                        android:gravity="center"
                        android:text="@string/ent"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_16sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcv_debug_process"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0.3dp" />
            </LinearLayout>
        </LinearLayout>


    </RelativeLayout>


</LinearLayout>